--- a/docs/styles/global.css
+++ b/docs/styles/global.css
@@ -1,1 +1,19 @@
 
+:root {
+  --bg-color: white;
+  --text-color: black;
+  --shadow: lightgray;
+  --invert: 0%;
+}
+
+body.dark {
+  --bg-color: #2c2c2c;
+  --text-color: white;
+  --shadow: rgb(100, 100, 100);
+  --invert: 100%;
+}
+
+body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
